fix(styling): small Composite Editor fixes for Dark Mode (#1417)

--- a/examples/vite-demo-vanilla-bundle/src/examples/example11.scss
+++ b/examples/vite-demo-vanilla-bundle/src/examples/example11.scss
@@ -4,20 +4,22 @@ $slick-autocomplete-max-height: 250px;
 // @import '@slickgrid-universal/common/dist/styles/sass/slickgrid-theme-salesforce.scss';
 @import 'bulma/bulma';
 
-.unsaved-editable-field {
-  background-color: #fbfdd1 !important;
-}
-.dropdown-item {
-  cursor: pointer;
-}
-.dropdown-item-disabled {
-  color: #afafaf;
-  cursor: default;
-}
-.ml-1-negative {
-  margin-left: -5px;
-}
-.action-btns {
-  display: inline-block;
-  line-height: 18px;
+.grid11 {
+  .unsaved-editable-field {
+    background-color: #fbfdd1 !important;
+  }
+  .dropdown-item {
+    cursor: pointer;
+  }
+  .dropdown-item-disabled {
+    color: #afafaf;
+    cursor: default;
+  }
+  .ml-1-negative {
+    margin-left: -5px;
+  }
+  .action-btns {
+    display: inline-block;
+    line-height: 18px;
+  }
 }
